--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 
     <!-- FOOTER -->
     <footer>
-      <p>&copy 1997-2018 Netflix, Inc.</p>
-      <p>Carlos Avila &copy 2018</p>
+      <p>&copy 2021 Netflix, Inc.</p>
+      <p>Dimitri Dwyer &copy 2021</p>
     </footer>
   </div>
 </body>
